test/good/strings/for2.px

for c in "abcdefg" step 3 do
    print c
