test/bad/loops/for5.px

for i in 5..4.."3" do
    skip
